--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="addNew_DateTitle">Select a Date :</string>
     <string name="menuAddNew_save">Save</string>
     <string name="recyclerView_dateTitle" >"Date : "</string>
+    <string name="recents_title">Upcoming Birthdates</string>
 </resources>
