--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,11 +6,19 @@
     <string name="recyclerview_demoName">Tamzid Hasan Nahid</string>
     <string name="recyclerview_demoTime">10:49 PM</string>
     <string name="recyclerView_demoDate">03-02</string>
-    <string name="mainHome_sortTitle">Sort</string>
+    <string name="mainHome_sortTitle">Sort :</string>
     <string name="addNew_nameFieldHint">Name</string>
     <string name="addNew_timeTitle">Select a Time :</string>
     <string name="addNew_DateTitle">Select a Date :</string>
     <string name="menuAddNew_save">Save</string>
     <string name="recyclerView_dateTitle" >"Date : "</string>
     <string name="recents_title">Upcoming Birthdates</string>
+
+
+    <string-array name="mainHome_sortList">
+        <item>Alphabetic</item>
+        <item>Date</item>
+    </string-array>
+
+
 </resources>
